@@ -1,3 +1,5 @@
+ * Update py:attrs attributes in opendocument
+
 0.5.3 - 20100110
  * Escape elements values in opendocument template
 
